# tapkey

./: .gitignore  CNAME  Cargo.toml  Info.plist  LICENSE  Makefile  README.md  flake.nix  index.html  nearby.css  nearby.html  nearby.js  prf-cli.entitlements  run-in-nix.sh  tapkey.entitlements  tapkey.icns
.github/workflows/: deploy-relay.yml  pages.yml  reencrypt-secrets.yml  release-tag.yml  release.yml  test.yml
.well-known/: apple-app-site-association
Sources/: PrfCli.swift  Tapkey.swift
Tapkey.app/Contents/: Info.plist
Tapkey.app/Contents/MacOS/: tapkey
cli/: Cargo.toml
cli/src/: encrypt.rs  lib.rs  main.rs  nearby.rs  ssh.rs  tests.rs
cli/tests/: e2e_crypto.rs
core/: Cargo.toml
core/src/: lib.rs  ssh.rs  tests.rs
core/tests/tests/: e2e_crypto.rs
distribution/: encrypt-cf-token.sh  get-age-key.sh  notarize.sh  read-secret.sh  setup-signing.sh  signing-common.sh
distribution/secrets/: age-recipients.txt
mac/: Cargo.toml  Info.plist  tapkey.entitlements
mac/src/: auth.rs  credential.rs  main.rs  nearby.rs
mac/swift-lib/: Package.swift
mac/swift-lib/Sources/PasskeyBridge/: PasskeyBridge.swift
macos/: Cargo.toml  Info.plist  keytap.entitlements
macos/keytap.icon/: icon.json
macos/src/: lib.rs
macos/swift-lib/Sources/PasskeyBridge/: PasskeyBridge.swift
relay/: wrangler.toml
relay/src/: index.js  index.ts
secrets/: CLOUDFLARE_API_TOKEN.age  MACOS_P12_BASE64.age  MACOS_P12_PASSWORD.age  NOTARY_ISSUER_ID.age  NOTARY_KEY_BASE64.age  NOTARY_KEY_ID.age  PROVISION_PROFILE_BASE64.age  age-recipients.txt
tapkey.icon/: icon.json
tests/: simulate_phone.py
tests/fixtures/: derivation-vectors.json
web/: 404.html  CNAME  app.css  app.html  app.js  index.html  nearby-bridge.js  nearby.css  nearby.html  nearby.js  state.js
web/relay/: wrangler.toml
web/relay/src/: index.js
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
web/wasm/tests/: wasm_parity.rs
