[package]
name = "tapkey"
version = "1.2.0"
edition = "2021"

[[bin]]
name = "tapkey"
path = "src/main.rs"

[features]
default = ["native-passkey"]
native-passkey = ["tapkey-macos"]

[dependencies]
tapkey-core = { path = "../core" }
tapkey-macos = { path = "../macos", optional = true }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
qr2term = "0.3"
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.2"
