[package]
name = "tapkey-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
bech32 = "0.11"
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
