[package]
name = "tapkey"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "tapkey"
path = "src/main.rs"

[dependencies]
tapkey-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
dirs = "6"
rand = "0.8"

objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-authentication-services = "0.3"
