[package]
name = "tapkey"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "tapkey"
path = "src/main.rs"

[dependencies]
tapkey-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
dirs = "6"

[build-dependencies]
swift-rs = { version = "1.0", features = ["build"] }
