[package]
name = "tapkey"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "tapkey"
path = "src/main.rs"

[dependencies]
tapkey-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
qr2term = "0.3"
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.2"

[build-dependencies]
swift-rs = { version = "1.0", features = ["build"] }
